<resources>
    <string name="app_name">TV Show &amp; Movie Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Configuración</string>
    <string name="main_hint_userName">Nombre</string>
    <string name="main_hint_email">Email</string>
    <string name="main_hint_provider">Proveedor</string>
    <string name="main_menu_signOut">Cerrar sesión</string>
    <string name="toolbar_title_text"><![CDATA[TV Show & Movie Tracker]]></string>

    <string name="movie_title_textview_text">Movie</string>
    <string name="movie_releaseDate_textview_text">Release date</string>
    <string name="movie_overview_textview_text">Movie overview</string>

    <string name="common_error_server">Ha ocurrido un problema en el servidor, intente más tarde.</string>
    <string name="common_label_ok">OK</string>
    <string name="common_label_accept">Aceptar</string>
    <string name="common_label_cancel">Cancelar</string>
    <string name="common_label_email">Correo electrónico</string>
    <string name="common_message_noInternet">Sin acceso a internet, verifique su conexión</string>
    <string name="common_validate_field_required">Este campo es requerido.</string>
    <string name="common_validate_email_invalid">Este correo no tiene un formato válido, verifique.</string>

    <!-- Login nuevo -->
    <string name="about_messaggi_description">La marca Texting y el logo son propiedad de Cursos
        Android ANT. Todos los derechos reservados.</string>
    <string name="about_privacy">Aviso de privacidad</string>
    <string name="about_version">Version:</string>
    <string name="about_webSite">www.texting.cursos-android-ant.com</string>

    <string name="login_error_user_exist">Usuario nuevo, registrando&#8230;></string>
    <string name="login_message_loading">Iniciando sesión&#8230;</string>
    <string name="login_message_starting">Cargando&#8230;</string>
    <string name="login_message_error">Imposible iniciar sesión, intente más tarde.</string>
    <string name="login_message_success">Bienvenido %s</string>

    <string name="main_dialog_accept">Eliminar</string>
    <!--<string name="main_dialog_message_confirmDelete">¿Estas seguro que quieres quitar a %s de tus amigos?
        \nSus conversaciones no se eliminarán permanentemente.</string>
    <string name="main_dialog_title_confirmDelete">Eliminar amigo</string>-->
    <string name="main_error_permission_denied">Cerrando&#8230;</string>
    <string name="main_menu_about">Acerca de</string>
    <string name="main_menu_action_singoff">Cerrar sesión</string>
    <!--<string name="main_message_request_accepted">Ahora %s y tu son amigos.</string>
    <string name="main_message_request_denied">Solicitud rechazada.</string>
    <string name="main_message_user_removed">Listo! Ya no son amigos.</string>
    <string name="main_title">Amigos</string>-->

    <string name="profile_title">Perfil</string>
    <string name="profile_dialog_title">Actualizar imagen de perfil</string>
    <string name="profile_dialog_message">¿Desea subir esta imagen a su perfil de usuario?</string>
    <string name="profile_dialog_accept">Subir</string>
    <string name="profile_error_userUpdated">Error al actualizar el usuario, intente más tarde.</string>
    <string name="profile_error_imageUpdated">Error al actualizar la imagen de perfil, intente más tarde.</string>
    <string name="profile_error_invalid_image">Esta imagen no se pudo procesar.</string>
    <string name="profile_error_notfound">Imagen/archivo no encontrado.</string>
    <string name="profile_hint_username">username</string>
    <string name="profile_message_userUpdated">Usuario actualizado correctamente.</string>
    <string name="profile_message_imageUploading">Cambiando imagen de perfil, espere&#8230;</string>
    <string name="profile_message_imageUpdated">Imagen de perfil actualizada correctamente.</string>

    <string name="action_movie_title">Mis películas</string>
    <string name="action_tvshow_title">Mis series</string>
    <string name="action_fav_title">Favoritas</string>

    <string name="movie_genre_text">-</string>
    <string name="movie_rating_text">-</string>
    <string name="movie_title_text">-</string>
    <string name="movie_releasedate_text">-</string>

    <string name="toolbar_menu_search_button">Buscar</string>
    <string name="toolbar_menu_filter_button">Filtrar</string>
    <string name="toolbar_menu_search_category_popular">Más populares</string>
    <string name="toolbar_menu_search_category_toprated">Mejor puntuadas</string>
    <string name="toolbar_menu_search_category_upcoming">Próximos estrenos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Perfil</string>
    <string name="action_center_button">Botón central</string>
    <string name="movie_details_textview_summary">Sinopsis</string>
    <string name="movie_details_textview_trailers">Trailers</string>
    <string name="movie_details_textview_reviews">Reviews</string>
    <string name="action_home_title">Home</string>
    <string name="slide_item_title_text">Slide title</string>
    <string name="searchview_text">Buscar…</string>
    <string name="home_popular_movies_textview">Películas más populares</string>
    <string name="grid_movie_title_textView">Movie</string>
    <string name="toolbar_menu_search_switch_view">Modificar vista</string>
    <string name="error_message_loading_genres">Ha habido un error al obtener la información del género de la película</string>
    <string name="error_message_loading_movie_info">Ha habido un error al obtener la información de la película</string>
    <string name="home_popular_movies_header_text">Popular</string>
    <string name="movie_details_review_textview">Comentarios</string>
    <string name="movie_details_trailers_textview">Trailers</string>
    <string name="movie_details_summary_textview">Sinopsis</string>
    <string name="person_content_description">Imagen de persona</string>
    <string name="backdrop_content_description">cabecera_de_detalle_de_pelicula</string>
    <string name="poster_content_description">Póster de la película</string>
    <string name="gradient_content_description">Gradiante para difuminar la cabecera de la película</string>
    <string name="movie_details_details_title">Detalles</string>
    <string name="picture_poster_content_description">Imagen del póster de la película</string>
    <string name="picture_cast_content_description">Imagen de casting de actores</string>
    <string name="calendar_content_description">Imagen de calendario</string>
    <string name="star_content_description">Imagen de estrella de puntuación</string>
    <string name="movie_details_genres_textview">Género</string>
    <string name="error_message_loading_trailers">Ha habido un error al obtener la información de los trailers</string>
    <string name="error_message_loading_lang">Ha habido un error al obtener la información de los idiomas</string>
    <string name="error_network_message">Hay algún problema con tu conexión a internet</string>
    <string name="error_message_loading_movies_panel">Ha habido un error al obtener la información de la lista de películas</string>
    <string name="error_message_loading_search_movie">Error cargando lista de películas buscada</string>
    <string name="offline">Parece que no estás conectado a internet</string>
    <string name="home_toprated_movies_header_text">Mejor valoradas</string>
    <string name="home_toprated_movies_textview">Películas mejor valoradas</string>
    <string name="home_upcoming_movies_header_text">Próximamente</string>
    <string name="home_upcoming_movies_textview">Los próximos estrenos</string>
    <string name="home_movies_viewall_button">Ver todas</string>
    <string name="user_profile_name">Nombre Apellido Apellido</string>
    <string name="user_profile_close_session">Cerrar sesión</string>
    <string name="title_first_section">General</string>
    <string name="text_tmdb_usage">La aplicación utiliza la API de TMDb a modo educativo</string>
    <string name="title_info_category">Información</string>
    <string name="nonvalued_field_text">-</string>
    <string name="fragment_movie_details_original_title">Título original</string>
    <string name="fragment_movie_details_original_lang">Idioma original</string>
    <string name="fragment_movie_details_budget">Prespuesto</string>
    <string name="fragment_movie_details_revenue">Beneficios</string>
    <string name="fragment_movie_details_popularity">Popularidad</string>
    <string name="fragment_movie_details_status">Estado</string>
    <string name="fragment_movie_details_spoken_langs">Idiomas hablados</string>
    <string name="fragment_movie_details_prod_countries">País de producción</string>
    <string name="fragment_movie_details_prod_companies">Productoras</string>
    <string name="fragment_movie_details_webpage">Página web</string>
    <string name="release_date_movie_regex_separator">-</string>
    <string name="toolbar_switch_view_button">Cambiar vista</string>
    <string name="user_profile_email">email@domain.ltd</string>
    <string name="successfully_movie_deleted_from_favs">Película eliminada de favoritos correctamente.</string>
    <string name="successfully_movie_added_to_favs">Película añadida a favoritos correctamente.</string>
    <string name="search_fragment_no_results_message">No se han encontrado resultados en la búsqueda.</string>
    <string name="movie_details_on_firebase_exists_error">Ha habido un error obteniendo el estado de la película</string>
    <string name="favorites_fragment_on_genre_listener_error">No se han podido recuperar los géneros de las películas</string>
</resources>