<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/popular"
        android:enabled="true"
        android:title="@string/toolbar_menu_search_category_popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_rated"
        android:enabled="true"
        android:title="@string/toolbar_menu_search_category_toprated"
        app:showAsAction="never" />
    <item
        android:id="@+id/upcoming"
        android:enabled="true"
        android:title="@string/toolbar_menu_search_category_upcoming"
        app:showAsAction="never" />

    <item
        android:id="@+id/switch_view"
        android:enabled="true"
        android:title="@string/toolbar_menu_search_switch_view"
        app:showAsAction="never" />

</menu>