<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OldMainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPhotoProfile"
        android:layout_width="251dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_padding_tv"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/imgPhotoProfile"
        app:layout_constraintEnd_toEndOf="@id/imgPhotoProfile"
        app:layout_constraintTop_toBottomOf="@id/imgPhotoProfile"
        style="?android:progressBarStyleHorizontal"/>

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/progressBar"
        app:layout_constraintBottom_toBottomOf="@id/progressBar" />

    <TextView
        android:id="@+id/tvUserName"
        style="@style/TextViewBase"
        android:layout_marginTop="28dp"
        android:hint="@string/main_hint_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPhotoProfile" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/TextViewBase"
        android:layout_marginTop="24dp"
        android:hint="@string/main_hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName" />

    <TextView
        android:id="@+id/tvProvider"
        style="@style/TextViewBase"
        android:layout_marginTop="40dp"
        android:hint="@string/main_hint_provider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/tvMovieInfo"
        style="@style/TextViewBase"
        android:layout_marginTop="40dp"
        android:hint="@string/main_hint_provider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProvider"
        app:layout_constraintVertical_bias="0.002" />

</androidx.constraintlayout.widget.ConstraintLayout>